--- a/HTML/Sobre.html
+++ b/HTML/Sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 02 CSS</title>
-    <link rel="stylesheet" href="/ProgramacaoWeb_01_2025/02CSS/02Aula/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="icon" href="https://toppng.com/uploads/preview/bootstrap-social-media-icons-html-css-js-logo-11563293145uql7yehdq3.png">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <nav>
             <img src="https://upload.wikimedia.org/wikipedia/pt/c/cb/Natura_Logo.png" alt="Logo Natura">
             <ul>
-                <li><button><a href="/ProgramacaoWeb_01_2025/02CSS/02Aula/index.html">Home</a></button></li>
+                <li><button><a href="/index.html">Home</a></button></li>
                 <li><button><a href="Produtos.html">Produtos</a></button></li>
                 <li><button><a href="#">Sobre</a></button></li>
             </ul>
