--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section id="text">
-            <h2>Bem-Vindo(a) ao Natura </h2>
+            <h2>Bem-Vindo(a) a Natura </h2>
         </section>
         <section id="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lWUE0KpvjvU?si=xAIGLXUWQMiagCgL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
