--- a/Produtos.html
+++ b/Produtos.html
@@ -12,7 +12,7 @@
         <nav>
             <img src="https://upload.wikimedia.org/wikipedia/pt/c/cb/Natura_Logo.png" alt="Logo Natura">
             <ul>
-                <li><button><a href="/index.html">Home</a></button></li>
+                <li><button><a href="index.html">Home</a></button></li>
                 <li><button><a href="#">Produtos</a></button></li>
                 <li><button><a href="Sobre.html">Sobre</a></button></li>
             </ul>
