--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="https://upload.wikimedia.org/wikipedia/pt/c/cb/Natura_Logo.png" alt="Logo Natura">
             <ul>
                 <li><button><a href="#">Home</a></button></li>
-                <li><button><a href="HTML/Produtos.html">Produtos</a></button></li>
-                <li><button><a href="HTML/Sobre.html">Sobre</a></button></li>
+                <li><button><a href="Produtos.html">Produtos</a></button></li>
+                <li><button><a href="Sobre.html">Sobre</a></button></li>
             </ul>
         </nav>
     </header>
